syntax = "proto3";

import "alimama.proto";
import "google/protobuf/empty.proto";

package ourmama.proto;

message IntraReq {
    uint32 gen = 1; // version generation id
    uint32 id = 2; // session id
    repeated uint32 offset = 3; // which task in the session
    repeated alimama.proto.SliceRequest slice_req = 4;
}

message IntraResp {
    uint32 id = 1;
    repeated uint32 offset = 2;
    repeated bytes data = 3;
}

service IntraService {
    rpc Get(IntraReq) returns (IntraResp);
}

service PingService {
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
}
